@@ -351,6 +351,12 @@ literal|false
 decl_stmt|;
 specifier|private
 name|String
+name|resolveMode
+init|=
+literal|null
+decl_stmt|;
+specifier|private
+name|String
 name|log
 init|=
 name|ResolveOptions
@@ -1626,6 +1632,14 @@ name|getSettingsRef
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|resolve
+operator|.
+name|setResolveMode
+argument_list|(
+name|getResolveMode
+argument_list|()
+argument_list|)
+expr_stmt|;
 return|return
 name|resolve
 return|;
@@ -2065,6 +2079,30 @@ block|{
 return|return
 name|refresh
 return|;
+block|}
+specifier|public
+name|String
+name|getResolveMode
+parameter_list|()
+block|{
+return|return
+name|resolveMode
+return|;
+block|}
+specifier|public
+name|void
+name|setResolveMode
+parameter_list|(
+name|String
+name|resolveMode
+parameter_list|)
+block|{
+name|this
+operator|.
+name|resolveMode
+operator|=
+name|resolveMode
+expr_stmt|;
 block|}
 block|}
 end_class
